# maze-narrative-skill

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  README_JA.md  pyproject.toml  validate_skill.py
.claude/: settings.local.json
.github/workflows/: validate-skill.yml
maze/: __init__.py  core.py  pipeline.py
maze/gates/: __init__.py  idea.py  quality.py  safety.py
skills/maze-engine/: SKILL.md
tests/: __init__.py  test_core.py
