[metadata]
name = "maze-narrative-skill"
version = "1.0.0"
description = "Autonomous fiction generation engine based on Trap-Based Narrative Theory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "The Maze Project", email = "maze@example.com"}]
keywords = ["narrative", "fiction", "claude-skill", "trap-theory"]

dependencies = [
    "click>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
